@@ -1,3 +1,7 @@
+2002-02-18 (Thomas):
+  * Setting the HD drives is now also included in the GUI.
+  * Updated the readme.txt.
+
 2002-02-05 (Thomas Huth):
   * Added Svens HD-image patch.
   * Yet another bugfix for BeOS (lseek again...)
